give name and change in stylesheet

--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Supriya_portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="header-main">
-    <nav>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="header-main">
+      <nav>
         <a href="">Home</a>
         <a href="">About</a>
         <a href="">Projects</a>
         <a href="">Contact</a>
-    </nav>
- 
-</div>
-    
-    
-</body>
+      </nav>
+      <div class="name">
+        <h2>Supriya Kavathekar</h2>
+        <h3>Frontend Developer</h3>
+        <h3>UX Designer</h3>
+      </div>
+    </div>
+
+    <section>
+      <article>
+        <h2 id="aboutme">About me</h2>
+      </article>
+    </section>
+  </body>
 </html>
