created contact,about,project.html files

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="header-main">
       <nav>
         <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Projects</a>
-        <a href="">Contact</a>
+        <a href="aboutme.html">About</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact</a>
       </nav>
       <div class="name">
         <h2>Supriya Kavathekar</h2>
@@ -21,11 +21,5 @@
         <h3>UX Designer</h3>
       </div>
     </div>
-
-    <section>
-      <article>
-        <h2 id="aboutme">About me</h2>
-      </article>
-    </section>
   </body>
 </html>
