written about me html

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,17 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>aboutme</title>
-   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<section>
-    
-</section>
-
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="mainabout">
+      <figure>
+        <img src="/assets/images/supriya_about.jpg" alt="supriyaabout" />
+      </figure>
+      <article>
+        <h1>About me</h1>
+        <br />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+          fugit illum, odio aut officia dolore atque iste dolorum officiis ab
+          ullam culpa magnam rerum non ea, vero, porro minima. Numquam!
+        </p>
+      </article>
+      <article>
+        <details>
+          <summary>Education</summary>
+          <ul>
+            <li>High school</li>
+            <li>bachlores</li>
+            <li>UX Designer Course</li>
+            <li>Fronend Developement Course</li>
+          </ul>
+        </details>
+        <br />
+        <details>
+          <summary>Experinece</summary>
+          <ul>
+            <li>IBM</li>
+            <li>PTC Software</li>
+          </ul>
+        </details>
+        <br />
+        <details>
+          <summary>Skills</summary>
+          <ul>
+            <li>UX skills</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>java Script</li>
+            <li>React</li>
+            <li>GIT</li>
+          </ul>
+        </details>
+      </article>
+    </section>
+  </body>
 </html>
