--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <div class="header-main">
       <nav>
-        <a href="">Home</a>
+        <a href="index.html">Home</a>
         <a href="aboutme.html">About</a>
-        <a href="#">Projects</a>
-        <a href="#">Contact</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
       </nav>
       <div class="name">
         <h2>Supriya Kavathekar</h2>
