--- a/index.html
+++ b/index.html
@@ -8,28 +8,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="frontpage">
-      <header>
-        LOGO
+    <section class="header-main">
+      
         <nav>
-          <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
-          </ul>
+          <a href="index.html">Home</a>
+          <a href="aboutme.html">About</a>
+          <a href="projects.html">Projects</a>
+          <a href="contact.html">Contact</a>
         </nav>
-      </header>
-
-      <div class="name">
-        <h4>Supriya Kavathekar</h4>
-        <p>Frontend Developer|UX Designer</p>
-        <button>Download CV</button>
-      </div>
+        <div class="name">
+          <h2>Supriya Kavathekar</h2>
+          <h3>Frontend Developer,</h3>
+          <h3>UX Designer</h3>
+          <br>
+          <button class="downloadcv">Download CV</button>
+        </div>
+   
     </section>
 
     <section class="about">
-      <div><img src="/assets/images/supriya_about.jpg" alt="" /></div>
+      <div><img src="/assets/images/sup.jpg" alt="" /></div>
       <div>
         <h2>About Me</h2>
         <p>
@@ -40,38 +38,41 @@
         </p>
       </div>
 
-      <div class="exp">
-        <details>
-          <summary>Education</summary>
-          <ul>
-            <li>High school</li>
-            <li>bachlores</li>
-            <li>UX Designer Course</li>
-            <li>Fronend Developement Course</li>
-          </ul>
-        </details>
-        <br />
-        <details>
-          <summary>Experinece</summary>
-          <ul>
-            <li>IBM</li>
-            <li>PTC Software</li>
-          </ul>
-        </details>
-        <br />
-        <details>
-          <summary>Skills</summary>
-          <ul>
-            <li>UX skills</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>java Script</li>
-            <li>React</li>
-            <li>GIT</li>
-          </ul>
-        </details>
-      </div>
-    </section>
+     <div class="education">
+      <details>
+        <summary class="detail">Education</summary>
+        <ul>
+          <li>High School</li>
+          <li>Bachelors</li>
+          <li>UX Designer Course</li>
+          <li>Frontened Development Course</li>
+        </ul>
+      </details>
+      <br>
+
+      <details>
+        <summary class="detail">Experince</summary>
+        <ul>
+          <li>I.B.M.</li>
+          <li>PTC Software LTD.</li>
+        </ul>
+      </details>
+      <br>
+
+      <details>
+        <summary class="detail">Skills</summary>
+        <ul>
+          <li>UX Design skills</li>
+          <li>html</li>
+          <li>CSS</li>
+          <li>JAVA Script</li>
+          <li>React</li>
+          <li>GIT</li>
+        </ul>
+      </details>
+
+     </div>
+       
 
     <section class="portfolio">
       <header><h2>Portfolio</h2></header>
