--- a/index_old.html
+++ b/index_old.html
@@ -14,9 +14,9 @@
     <div class="header-main">
       <nav>
         <a href="index.html">Home</a>
-        <a href="aboutme.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
+        <a href="#">About</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact</a>
       </nav>
       <div class="name">
         <h2>Supriya Kavathekar</h2>
