give id and class to headings to connect them

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       
         <nav>
           <a href="index.html">Home</a>
-          <a href="aboutme.html">About</a>
-          <a href="projects.html">Projects</a>
-          <a href="contact.html">Contact</a>
+          <a href="#about">About</a>
+          <a href="#portfolio">Projects</a>
+          <a href="#contact">Contact</a>
         </nav>
         <div class="name">
           <h2>Supriya Kavathekar</h2>
@@ -26,7 +26,7 @@
    
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
       <div><img src="/assets/images/sup.jpg" alt="" /></div>
       <div>
         <h2>About Me</h2>
@@ -74,7 +74,7 @@
      </div>
        
 
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
       <header><h2>Portfolio</h2></header>
 
       <div class="projects">
@@ -86,7 +86,7 @@
       <button>See More</button>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
       <div class="contactdetail"></div>
     </section>
 
