added resume to downlod button

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
           <h2>Supriya Kavathekar</h2>
           <h3>Frontend Developer,</h3>
           <h3>UX Designer</h3>
+          
+          
           <br>
-          <button class="downloadcv">Download CV</button>
+         <a href="/assets/Resume-Supriya-Kavathekar-UX-Designer.pdf" download="supriya-resume"> <button class="downloadcv">Download CV</button></a>
         </div>
    
     </section>
