changed bg color of nav bar and button

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </nav>
         <div class="name">
           <h2>Supriya Kavathekar</h2>
-          <h3>Frontend Developer,</h3>
-          <h3>UX Designer</h3>
+          <h3>  <span>  Frontend</span>  Developer,</h3>
+          <h3>UX <span> Designer </span></h3>
           
           
           <br>
