add styling for about me paragraph

--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
     </section>
 
     <section class="about" id="about">
-      <div><img src="/assets/images/sup.jpg" alt="" /></div>
-      <div>
-        <h2>About Me</h2>
+      <div><img src="/assets/images/supriya1.jpg" alt="" /></div>
+      <div class="aboutme">
+        <h2>-----<span>Who I am </span>-----</h2>
+
+        <h3>I am <span>Supriya</span> and I'm a <span> Frontend </span> Developer & <span>UX</span> Designer </h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
-          deleniti quasi quo maxime eum maiores quis odio omnis, illum similique
-          commodi quidem explicabo illo laboriosam magni quas, ratione incidunt
-          molestias?
+          I am highly motivated, enthusiastic & thorough profesional, with proven correctness & credibility in congruence with the cababilities of working on own initiative with a systematic approach & asingle-minded dedication
+          towards the task at hand. A quick learner who can absorb new ideas. My passion for an urge to create 
+          websie with high end technology. I value and embrace human connections, either with end users or withing product.
         </p>
       </div>
 
