add language tab in about me secction

--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
           <li>GIT</li>
         </ul>
       </details>
+      <br>
+      <details>
+        <summary class="detail">Languages</summary>
+        <ul>
+          <li>English</li>
+          <li>German</li>
+          <li>Hindi</li>
+          <li>Marathi</li>
+        </ul>
+      </details>
 
      </div>
        
