added images to projects

--- a/index.html
+++ b/index.html
@@ -96,13 +96,28 @@
        <!-- project section -->
 
   <section class="portfolio" id="portfolio">
-
-      <div class="projects">
-        <div>project1</div>
-        <div>project2</div>
-        <div>project3</div>
+       <div class="header-portfolio">
+        <h2><span>-----</span> My Projects <span>-----</span></h2>
+       </div>
+      <div class="portfolio-parent">
+        <figure class="portfolio-child">
+         <a href=" https://soulyoga.netlify.app"> <img src="/project/Yoga/assets/images/yogamain.jpeg" alt=""></a>
+          <figcaption>SoulYoga Landing page </figcaption>
+        </figure>
+        <figure class="portfolio-child">
+          <img src="/project/travel_blog/assets/images/img2.png" alt="">
+          <figcaption>Travel-Blog</figcaption>
+        </figure>
+        <figure class="portfolio-child">
+          <img src="/project/Recipe/salad.img" alt="">
+          <figcaption>Recipe Page</figcaption>
+        </figure>
+        <figure class="portfolio-child">
+          <img src="/project/class.png" alt="">
+          <figcaption>Shabda</figcaption>
+        </figure>
       </div>
-      <button>See More</button>
+      
     </section>
 
 
@@ -113,6 +128,6 @@
 
     </section>
 
-    <footer><p>made with love by supriya kavathekar</p></footer>
+    
   </body>
 </html>
