add link to projects

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
           <figcaption>SoulYoga Landing page </figcaption>
         </figure>
         <figure class="portfolio-child">
-          <img src="/project/travel_blog/assets/images/img2.png" alt="">
+         <a href=" https://travel-blog-supriya.netlify.app/"> <img src="/project/travel_blog/assets/images/img2.png" alt=""> </a>
           <figcaption>Travel-Blog</figcaption>
         </figure>
         <figure class="portfolio-child">
-          <img src="/project/Recipe/salad.img" alt="">
+          <a href="https://supriyarecipewebsite.netlify.app/"> <img src="/project/Recipe/salad.img" alt=""> </a>
           <figcaption>Recipe Page</figcaption>
         </figure>
         <figure class="portfolio-child">
-          <img src="/project/class.png" alt="">
+          <a href=""> <img src="/project/class.png" alt=""> </a>
           <figcaption>Shabda</figcaption>
         </figure>
       </div>
