give grid to project - min width 600px

--- a/index.html
+++ b/index.html
@@ -117,16 +117,21 @@
           <figcaption>Shabda</figcaption>
         </figure>
       </div>
+<!-- contact-section -->
+      <section class="contact" id="contact">
+
+        <div class="contactdetail">
+          <h2>contact</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa maxime, ab molestias, architecto quaerat eveniet est corporis atque deserunt quo omnis. Excepturi quaerat non sint beatae officia suscipit, deserunt nulla.</p>
+        </div>
+  
+      </section>
       
     </section>
 
 
-<!-- contact-section -->
-    <section class="contact" id="contact">
 
-      <div class="contactdetail"></div>
-
-    </section>
+   
 
     
   </body>
