remove unneccesary folder and change image pah of portfolio tab

--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
        </div>
       <div class="portfolio-parent">
         <figure class="portfolio-child">
-         <a href=" https://soulyoga.netlify.app"> <img src="/project/Yoga/assets/images/yogamain.jpeg" alt=""></a>
+         <a href=" https://soulyoga.netlify.app"> <img src="/assets/images/yogamain.jpeg" alt=""></a>
           <figcaption>SoulYoga Landing page </figcaption>
         </figure>
         <figure class="portfolio-child">
-         <a href=" https://travel-blog-supriya.netlify.app/"> <img src="/project/travel_blog/assets/images/img2.png" alt=""> </a>
+         <a href=" https://travel-blog-supriya.netlify.app/"> <img src="/assets/images/img2.png" alt=""> </a>
           <figcaption>Travel-Blog</figcaption>
         </figure>
         <figure class="portfolio-child">
-          <a href="https://supriyarecipewebsite.netlify.app/"> <img src="/project/Recipe/salad.img" alt=""> </a>
+          <a href="https://supriyarecipewebsite.netlify.app/"> <img src="/assets/images/salad.img" alt=""> </a>
           <figcaption>Recipe Page</figcaption>
         </figure>
         <figure class="portfolio-child">
-          <a href=""> <img src="/project/class.png" alt=""> </a>
+          <a href=""> <img src="/assets/images/class.png" alt=""> </a>
           <figcaption>Shabda</figcaption>
         </figure>
       </div>
