add blank target to portfolio ahref and add linkdin profile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="header-main" id="top" >
       
         <nav>
-          <a href="index.html">Home</a>
+         <a href="index.html">Home</a>
           <a href="#about">About</a>
           <a href="#portfolio">Projects</a>
           <a href="#contact">Contact</a>
@@ -103,19 +103,19 @@
        </div>
       <div class="portfolio-parent">
         <figure class="portfolio-child">
-         <a href=" https://soulyoga.netlify.app"> <img src="/assets/images/yogamain.jpeg" alt=""></a>
+         <a target="_blank" href=" https://soulyoga.netlify.app"> <img src="/assets/images/yogamain.jpeg" alt=""></a>
           <figcaption>SoulYoga Landing page </figcaption>
         </figure>
         <figure class="portfolio-child">
-         <a href=" https://travel-blog-supriya.netlify.app/"> <img src="/assets/images/img2.png" alt=""> </a>
+         <a target="_blank" href=" https://travel-blog-supriya.netlify.app/"> <img src="/assets/images/img2.png" alt=""> </a>
           <figcaption>Travel-Blog</figcaption>
         </figure>
         <figure class="portfolio-child">
-          <a href="https://supriyarecipewebsite.netlify.app/"> <img src="/assets/images/salad.img" alt=""> </a>
+          <a target="_blank" href="https://supriyarecipewebsite.netlify.app/"> <img src="/assets/images/salad.img" alt=""> </a>
           <figcaption>Recipe Page</figcaption>
         </figure>
         <figure class="portfolio-child">
-          <a href=""> <img src="/assets/images/class.png" alt=""> </a>
+          <a target="_blank" href=""> <img src="/assets/images/class.png" alt=""> </a>
           <figcaption>Shabda</figcaption>
         </figure>
       </div>
@@ -142,7 +142,7 @@
       <div class="social-contact">
         <a href="https://www.facebook.com/"> <img src="/assets/icons/facebook.png" alt=""></a>
         <a href="https://www.instagram.com/"><img src="/assets/icons/instagram.png" alt=""></a>
-        <a href="https://twitter.com/?lang=en"><img src="/assets/icons/twitter.png" alt=""></a>
+        <a href="https://www.linkedin.com/in/supriya-kavathekar-17b8b283/"><img src="/assets/icons/linkedin.png" alt=""></a>
         <a href="https://github.com/supriyakavathekar"><img src="/assets/icons/github.png" alt=""></a>
       </div>
     
